投稿詳細取得用エンドポイントを実装 #22
